--- a/web/input.html
+++ b/web/input.html
@@ -13,20 +13,20 @@
 <div>
   <button>&lt;button&gt;</button>
   <br/><br/>
-  <input type="button" value="&lt;input type=&quot;button&quot; /&gt;"></input>
+  <input type="button" value="&lt;input type=&quot;button&quot;/&gt;"/>
   <br/><br/>
-  <input type="reset" value="&lt;input type=&quot;reset&quot; /&gt;"></input>
+  <input type="reset" value="&lt;input type=&quot;reset&quot;/&gt;"/>
   <br/><br/>
-  <input type="submit" value="&lt;input type=&quot;submit&quot; /&gt;"></input>
+  <input type="submit" value="&lt;input type=&quot;submit&quot;/&gt;"/>
 </div>
 <div>
-  <input type="image" alt="&lt;input type=&quot;image&quot; /&gt;"></input>
+  <input type="image" alt="&lt;input type=&quot;image&quot;/&gt;"/>
 </div>
 <div>
-  <input type="checkbox" id="checkbox"></input><label for="checkbox"> &lt;input type=&quot;checkbox&quot; /&gt;</label>
+  <input type="checkbox" id="checkbox"/><label for="checkbox"> &lt;input type=&quot;checkbox&quot;/&gt;</label>
 </div>
 <div>
-  <input type="radio" id="radio"></input><label for="radio"> &lt;input type=&quot;radio&quot; /&gt;</label>
+  <input type="radio" id="radio"/><label for="radio"> &lt;input type=&quot;radio&quot;/&gt;</label>
 </div>
 <div>
   <select><option>&lt;select&gt;</option><option>&lt;option&gt;</option></select>
@@ -36,14 +36,14 @@
   <select multiple><option>&lt;select multiple&gt;</option><option>&lt;option&gt;</option></select>
 </div>
 <div>
-  <input value="&lt;input /&gt;"></input>
+  <input value="&lt;input/&gt;"/>
   <br/><br/>
-  <input type="password" value="&lt;input type=&quot;password&quot; /&gt;"></input>
+  <input type="password" value="&lt;input type=&quot;password&quot;/&gt;"/>
   <br/><br/>
-  <input type="url" value="&lt;input type=&quot;url&quot; /&gt;"></input>
+  <input type="url" value="&lt;input type=&quot;url&quot;/&gt;"/>
   <br/><br/>
   <textarea>&lt;textarea&gt;</textarea>
 </div>
 <div>
-  <input type="file"></input>
+  <input type="file"/>
 </div>
